--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,274 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
+}
+
+nav{
+    display: flex;
+    justify-content: space-between;
+
+    background-color: #027ff2;
+    height: 100px;
+    width: 100%;
+    padding: 30px;
+    margin-bottom: 40px;
+     
+}
+
+.text-centered{
+    text-align: center;
+}
+
+.hamburger-nav{
+    color: white;
+    font-size: 2em;
+}
+
+.container{ 
+    display:flex;
+    flex-direction: column;
+}
+
+.row{
+    display: flex;
+    flex-direction: column;
+
+    background-color: #b5ddff;
+    border-radius: 20px;
+
+    width: 80%;
+    margin: 30px auto;
+}
+
+.row h2{
+    color: #027ff2;
+}
+
+.col{
+    padding: 40px;
+    font-size: 20px;
+}
+
+.col p {
+    line-height: 30px;
+    padding-top: 25px;
+    padding-bottom: 30px;
+}
+
+.col button{
+    background-color: #027ff2;
+    color: white;
+    border: none;
+    padding: 20px;
+    border-radius: 40px;
+    font-size: 25px;
+    width: 325px;
+}
+
+.col2 img{
+    width: 100%;
+    margin-bottom: -5px;
+}
+
+.row-demo{
+    display: flex;
+    flex-direction: column;
+
+    background-color: #b5ddff;
+    border-radius: 20px;
+
+    width: 80%;
+    margin: 30px auto;
+}
+
+.row-demo i{
+    display: block;
+
+    color: #027ff2;
+    text-align: center;
+    font-size: 100px;
+
+    padding-bottom: 30px;
+}
+
+.row-demo h2{
+    color: #027ff2;
+}
+
+.col-demo{
+    padding: 40px;
+    font-size: 20px;
+}
+
+.col-demo p{
+    line-height: 40px;
+    padding-top: 25px;
+    padding-bottom: 30px;
+    text-align: center;
+}
+
+.container2{
+    display: flex;
+    flex-direction: column;
+    background-color: #9792e4;
+    padding: 40px;
+}
+
+.row-planning{
+    display: flex;
+    flex-direction: column;
+}
+
+.col-planning{
+    color: white;
+}
+
+.col-planning img{
+    width: 100%;
+}
+
+.col-planning h2{
+    font-size: 45px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+
+.col-planning p{
+    line-height: 30px;
+    padding-bottom: 40px;
+}
+
+.white-flex{
+    display: flex;
+    flex-direction: column;
+
+    background-color: white;
+    border-radius: 40px;
+    padding: 20px;
+
+    text-align: center;
+}
+
+.white-flex h2{
+    padding-bottom: 40px;
+
+}
+
+.white-flex p{
+    line-height: 30px;
+    padding-bottom: 40px;
+}
+
+.white-flex i{
+    background-color: #9792e4;
+    color: #1b1849;
+
+    padding: 30px;
+    border-radius: 50px;
+}
+
+.row-partners{
+    display: flex;
+    flex-direction: column;
+
+    border-radius: 20px;
+
+    width: 80%;
+    margin: 30px auto;
+}
+
+.col-partners{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+
+    padding: 40px;
+    font-size: 20px;
+    text-align: center;
+}
+
+.col-partners h2{
+    color: #9792e4;
+}
+
+.col-partners p{
+    line-height: 30px;
+}
+
+.col-partners2{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    padding: 40px;
+    font-size: 20px;
+    background-color: #9792e4;
+    border-radius: 50px;
+    
+    color: white;
+    text-align: center;
+}   
+
+.col-partners2 p{
+     line-height: 30px;
+     margin-bottom: 20px;
+}
+
+.photo-circle{
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.photo-circle img{
+    height: 100%;
+    object-fit: cover;
+}
+
+.row-benefits {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.benefits-title{
+    color: white;
+    font-size: 50px;
+    text-align: center;
+    padding-bottom: 60px;
+}
+
+.col-benefits{ 
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+
+    color: #9792e4;
+    background-color: white;
+    border-radius: 30px;
+    padding: 40px;
+}
+
+.col-benefits h1{
+    font-size: 60px;
+}
+
+.col-benefits h2{
+    font-size: 40px;
+}
+
+.col-benefits p{
+    color: gray;
+    font-size: 20px;
+    line-height: 30px;
+}
+
+.col-benefits button{
+    background-color:#9792e4;
+    color: white;
+    border: none;
+    padding: 20px;
+    border-radius: 40px;
+    font-size: 25px;
+    width: 259px;
 }
